Fixed height issue on cockpit selector widget on ie11

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_cockpitEngine.scss
@@ -2672,5 +2672,10 @@
 				font-size: $mediumFontSize;
 			}
 		}
-	}    
+	}
+	cockpit-selector-widget {
+		.cockpitSelectorWidget {
+			height: 100%;
+		}
+	}
 }
